Refine notification request and response models
